layouts_full.txt
In file included from <stdin>:1:
In file included from extern/CommonLibSSE/include\RE/Skyrim.h:3:
extern/CommonLibSSE/include\SKSE/Impl/PCH.h:441:13: error: no member named 'source_loc' in namespace 'spdlog'
  441 |                                 spdlog::source_loc{
      |                                         ^~~~~~~~~~
In file included from <stdin>:1:
In file included from extern/CommonLibSSE/include\RE/Skyrim.h:3:
In file included from extern/CommonLibSSE/include\SKSE/Impl/PCH.h:510:
In file included from extern/CommonLibSSE/include\REL/REL.h:3:
extern/CommonLibSSE/include\REL/ID.h:160:32: error: no member named 'read' in 'binary_io::file_istream'
  160 |                                 const auto [format] = a_in.read<std::int32_t>();
      |                                                       ~~~~ ^
extern/CommonLibSSE/include\REL/ID.h:160:49: error: expected '(' for function-style cast or type construction
  160 |                                 const auto [format] = a_in.read<std::int32_t>();
      |                                                                 ~~~~~~~~~~~~^
extern/CommonLibSSE/include\REL/ID.h:160:51: error: expected expression
  160 |                                 const auto [format] = a_in.read<std::int32_t>();
      |                                                                               ^
extern/CommonLibSSE/include\REL/ID.h:176:11: error: no member named 'read' in 'binary_io::file_istream'
  176 |                                         a_in.read<std::int32_t, std::int32_t, std::int32_t, std::int32_t>();
      |                                         ~~~~ ^
extern/CommonLibSSE/include\REL/ID.h:176:28: error: expected '(' for function-style cast or type construction
  176 |                                         a_in.read<std::int32_t, std::int32_t, std::int32_t, std::int32_t>();
      |                                                   ~~~~~~~~~~~~^
extern/CommonLibSSE/include\REL/ID.h:176:35: error: definition or redeclaration of 'int32_t' not allowed inside a function
  176 |                                         a_in.read<std::int32_t, std::int32_t, std::int32_t, std::int32_t>();
      |                                                                 ~~~~~^
extern/CommonLibSSE/include\REL/ID.h:176:35: error: declaration of variable 'int32_t' with deduced type 'const auto' requires an initializer
extern/CommonLibSSE/include\REL/ID.h:176:70: error: expected ';' at end of declaration
  176 |                                         a_in.read<std::int32_t, std::int32_t, std::int32_t, std::int32_t>();
      |                                                                                                         ^
      |                                                                                                         ;
extern/CommonLibSSE/include\REL/ID.h:175:16: error: structured binding declaration must be the only declaration in its group
  175 |                                 const auto [major, minor, patch, revision] =
      |                                 ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  176 |                                         a_in.read<std::int32_t, std::int32_t, std::int32_t, std::int32_t>();
      |                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
extern/CommonLibSSE/include\REL/ID.h:182:33: error: no member named 'read' in 'binary_io::file_istream'
  182 |                                 const auto [nameLen] = a_in.read<std::int32_t>();
      |                                                        ~~~~ ^
extern/CommonLibSSE/include\REL/ID.h:182:50: error: expected '(' for function-style cast or type construction
  182 |                                 const auto [nameLen] = a_in.read<std::int32_t>();
      |                                                                  ~~~~~~~~~~~~^
extern/CommonLibSSE/include\REL/ID.h:182:52: error: expected expression
  182 |                                 const auto [nameLen] = a_in.read<std::int32_t>();
      |                                                                                ^
extern/CommonLibSSE/include\REL/ID.h:183:10: error: no member named 'seek_relative' in 'binary_io::file_istream'
  183 |                                 a_in.seek_relative(nameLen);
      |                                 ~~~~ ^
extern/CommonLibSSE/include\REL/ID.h:185:10: error: no member named 'read' in 'binary_io::file_istream'
  185 |                                 a_in.read(_pointerSize, _addressCount);
      |                                 ~~~~ ^
extern/CommonLibSSE/include\REL/ID.h:227:29: error: excess elements in struct initializer
  227 |                                 binary_io::file_istream in(a_filename);
      |                                                         ^  ~~~~~~~~~~
extern/CommonLibSSE/include\REL/ID.h:271:10: error: no member named 'read' in 'binary_io::file_istream'
  271 |                                 a_in.read(type);
      |                                 ~~~~ ^
extern/CommonLibSSE/include\REL/ID.h:277:11: error: no member named 'read' in 'binary_io::file_istream'
  277 |                                         a_in.read(id);
      |                                         ~~~~ ^
extern/CommonLibSSE/include\REL/ID.h:283:37: error: no member named 'read' in 'binary_io::file_istream'
  283 |                                         id = prevID + std::get<0>(a_in.read<std::uint8_t>());
      |                                                                   ~~~~ ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
